# waycast

./: .gitignore  Makefile  PKGBUILD  meson.build  waycast
data/: config.toml
include/: ConfigLoader.h  ConfigLoader.hpp  ThemeManager.h  ThemeManager.hpp  UIManager.h  UIManager.hpp
include/ui/: ui_app_data.h  ui_app_grid.h  ui_search_bar.h
src/: ConfigLoader.c  ConfigLoader.cpp  ThemeManager.c  ThemeManager.cpp  UIManager.c  UIManager.cpp  main.c  main.cpp
src/ui/: ui_app_data.c  ui_app_grid.c  ui_search_bar.c
themes/default/: style.css
